# axum-nextjs-postgres-typescript-tokio

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 001_create_users_table.sql
backend/src/: main.rs
backend/src/config/: database.rs
backend/src/handlers/: auth.rs  health.rs  users.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  user.rs
backend/src/services/: auth_service.rs  mod.rs
backend/src/utils/: jwt.rs
frontend/: README.md  bts.jsonc  package.json  pnpm-lock.yaml
frontend/apps/web/src/app/: layout.tsx
