[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id"] }

# Database & ORM
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Authentication & Security
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Environment & Config
dotenvy = "0.15.7"
anyhow = "1.0.98"
thiserror = "2.0.12"

# Time
chrono = { version = "0.4.41", features = ["serde"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }